namespaces/live.cloud-platform.service.justice.gov.uk/laa-review-criminal-legal-aid-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-review-criminal-legal-aid-production
  labels:
    component: "laa-review-criminal-legal-aid-production"
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crime-apply"
    cloud-platform.justice.gov.uk/application: "Review Criminal Legal Aid Applications"
    cloud-platform.justice.gov.uk/owner: "LAA Crime Apply and Review: laa-crime-apply-gg@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-review-criminal-legal-aid"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apply"
    cloud-platform.justice.gov.uk/review-after: ""
