namespaces/live.cloud-platform.service.justice.gov.uk/laa-review-criminal-legal-aid-production/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-review-criminal-legal-aid-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-review-criminal-legal-aid-production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: laa-review-criminal-legal-aid-production
spec:
  podSelector:
    matchLabels:
      metrics-target: laa-review-criminal-legal-aid-production-metrics-target
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
